# MultiTaskFlow

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  FIX_PLAN.md  MultiTaskFlow  README.md  VERSION.md  local_tset.py  pyproject.toml  setup.py  taskflowPro.sh  test_web.py
examples/: example.py  tasks.yaml
examples/scripts/: archive_data.sh  data_preprocess.py  evaluate_model.py  train_model.py
multitaskflow/: __init__.py  process_monitor.py  task_flow.py
multitaskflow/web/: history.py  manager.py  notify.py  queue_manager.py  server.py  ws.py
multitaskflow/web/api/: auth.py  execute.py  queues.py  tasks.py
multitaskflow/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
multitaskflow/web/frontend/src/: App.tsx  index.css
multitaskflow/web/frontend/src/api/: index.ts
multitaskflow/web/frontend/src/components/: AddQueueDialog.tsx  FilterTabs.tsx  Header.tsx  LogPanel.tsx  LoginPage.tsx  NewTasksPreviewDialog.tsx  QueueTabs.tsx  ResizablePanels.tsx  SettingsPanel.tsx  TaskDetailDialog.tsx  TaskDialog.tsx  TaskTable.tsx  Toast.tsx  Toolbar.tsx  XTerminal.tsx
multitaskflow/web/frontend/src/stores/: queueStore.ts  settingsStore.ts  taskStore.ts
